<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="searchTopicsVM" type="com.snakesapplication.app.modules.searchtopics.data.viewmodel.SearchTopicsVM"/>
    </data>
    <LinearLayout android:gravity="start"
        android:id="@+id/linearSearchTopics"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylewhite_A700">
        <androidx.appcompat.widget.Toolbar
            android:gravity="center_horizontal"
            android:id="@+id/toolbarToolbar"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_20pxh"
            android:layout_marginStart="@dimen/_20pxh"
            android:layout_marginTop="@dimen/_6pxv"
            android:layout_width="match_parent" app:contentInsetStart="0dp">
            <LinearLayout android:id="@+id/linearRowarrowleft"
                android:layout_height="wrap_content"
                android:layout_width="match_parent" android:orientation="horizontal">
                <ImageView android:id="@+id/imageArrowleft"
                    android:layout_height="@dimen/_12pxh"
                    android:layout_marginBottom="@dimen/_18pxv"
                    android:layout_marginTop="@dimen/_18pxv"
                    android:layout_width="@dimen/_6pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_arrowleft"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_arrowleft"/>
                <EditText
                    android:background="@drawable/rectangle_bg_gray_300_radius_10"
                    android:drawablePadding="@dimen/_14pxh"
                    android:drawableStart="@drawable/img_rewind"
                    android:ellipsize="end"
                    android:hint="@string/lbl_search"
                    android:id="@+id/etSearchBar"
                    android:inputType="text"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_15pxh"
                    android:layout_weight="0.98"
                    android:layout_width="0dp"
                    android:paddingBottom="@dimen/_13pxv"
                    android:paddingEnd="@dimen/_30pxh"
                    android:paddingStart="@dimen/_19pxh"
                    android:paddingTop="@dimen/_13pxv"
                    android:singleLine="true"
                    android:text="@={searchTopicsVM.searchTopicsModel.etSearchBarValue}"
                    android:textColorHint="@color/gray_600"
                    style="@style/etSolidRounded" tools:ignore="Autofill"/>
            </LinearLayout>
        </androidx.appcompat.widget.Toolbar>
        <TextView android:ellipsize="end"
            android:id="@+id/txtExploreTopics"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_20pxh"
            android:layout_marginStart="@dimen/_20pxh"
            android:layout_marginTop="@dimen/_23pxv"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@{searchTopicsVM.searchTopicsModel.txtExploreTopics}"
            style="@style/txtPoppinsbold18" tools:text="@string/lbl_explore_topics"/>
        <TextView android:ellipsize="end" android:id="@+id/txtBooks"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_20pxh"
            android:layout_marginStart="@dimen/_20pxh"
            android:layout_marginTop="@dimen/_18pxv"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@{searchTopicsVM.searchTopicsModel.txtBooks}"
            style="@style/txtPoppinsregular18" tools:text="@string/lbl_books"/>
        <TextView android:ellipsize="end" android:id="@+id/txtFiction"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_20pxh"
            android:layout_marginStart="@dimen/_20pxh"
            android:layout_marginTop="@dimen/_12pxv"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@{searchTopicsVM.searchTopicsModel.txtFiction}"
            style="@style/txtPoppinsregular18" tools:text="@string/lbl_fiction"/>
        <TextView android:ellipsize="end" android:id="@+id/txtComics"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_20pxh"
            android:layout_marginStart="@dimen/_20pxh"
            android:layout_marginTop="@dimen/_13pxv"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@{searchTopicsVM.searchTopicsModel.txtComics}"
            style="@style/txtPoppinsregular18" tools:text="@string/lbl_comics"/>
        <TextView android:ellipsize="end" android:id="@+id/txtArt"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_20pxh"
            android:layout_marginStart="@dimen/_20pxh"
            android:layout_marginTop="@dimen/_13pxv"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@{searchTopicsVM.searchTopicsModel.txtArt}"
            style="@style/txtPoppinsregular18" tools:text="@string/lbl_art"/>
        <TextView android:ellipsize="end"
            android:id="@+id/txtVisualDesign"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_20pxh"
            android:layout_marginStart="@dimen/_20pxh"
            android:layout_marginTop="@dimen/_14pxv"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@{searchTopicsVM.searchTopicsModel.txtVisualDesign}"
            style="@style/txtPoppinsregular18" tools:text="@string/lbl_visual_design"/>
        <TextView android:ellipsize="end"
            android:id="@+id/txtTechnology"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_20pxh"
            android:layout_marginStart="@dimen/_20pxh"
            android:layout_marginTop="@dimen/_13pxv"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@{searchTopicsVM.searchTopicsModel.txtTechnology}"
            style="@style/txtPoppinsregular18" tools:text="@string/lbl_technology"/>
        <TextView android:ellipsize="end" android:id="@+id/txtScience"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_20pxh"
            android:layout_marginStart="@dimen/_20pxh"
            android:layout_marginTop="@dimen/_10pxv"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@{searchTopicsVM.searchTopicsModel.txtScience}"
            style="@style/txtPoppinsregular18" tools:text="@string/lbl_science"/>
        <TextView android:ellipsize="end" android:id="@+id/txtBusiness"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_20pxh"
            android:layout_marginStart="@dimen/_20pxh"
            android:layout_marginTop="@dimen/_13pxv"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@{searchTopicsVM.searchTopicsModel.txtBusiness}"
            style="@style/txtPoppinsregular18" tools:text="@string/lbl_business"/>
        <TextView android:ellipsize="end"
            android:id="@+id/txtPsychology"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_20pxh"
            android:layout_marginStart="@dimen/_20pxh"
            android:layout_marginTop="@dimen/_15pxv"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@{searchTopicsVM.searchTopicsModel.txtPsychology}"
            style="@style/txtPoppinsregular18" tools:text="@string/lbl_psychology"/>
        <TextView android:ellipsize="end"
            android:id="@+id/txtCreativity"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_20pxh"
            android:layout_marginStart="@dimen/_20pxh"
            android:layout_marginTop="@dimen/_12pxv"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@{searchTopicsVM.searchTopicsModel.txtCreativity}"
            style="@style/txtPoppinsregular18" tools:text="@string/lbl_creativity"/>
        <TextView android:ellipsize="end" android:id="@+id/txtEducation"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_20pxh"
            android:layout_marginStart="@dimen/_20pxh"
            android:layout_marginTop="@dimen/_10pxv"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@{searchTopicsVM.searchTopicsModel.txtEducation}"
            style="@style/txtPoppinsregular18" tools:text="@string/lbl_education"/>
        <TextView android:ellipsize="end" android:id="@+id/txtFeminism"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_20pxh"
            android:layout_marginStart="@dimen/_20pxh"
            android:layout_marginTop="@dimen/_13pxv"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@{searchTopicsVM.searchTopicsModel.txtFeminism}"
            style="@style/txtPoppinsregular18" tools:text="@string/lbl_feminism"/>
        <TextView android:ellipsize="end"
            android:id="@+id/txtArtificialInte"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_20pxh"
            android:layout_marginStart="@dimen/_20pxh"
            android:layout_marginTop="@dimen/_15pxv"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@{searchTopicsVM.searchTopicsModel.txtArtificialInte}"
            style="@style/txtPoppinsregular18" tools:text="@string/msg_artificial_intelligence"/>
        <TextView android:ellipsize="end" android:id="@+id/txtHealth"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_20pxh"
            android:layout_marginStart="@dimen/_20pxh"
            android:layout_marginTop="@dimen/_10pxv"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@{searchTopicsVM.searchTopicsModel.txtHealth}"
            style="@style/txtPoppinsregular18" tools:text="@string/lbl_health"/>
        <TextView android:ellipsize="end" android:id="@+id/txtDesign"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_20pxv"
            android:layout_marginEnd="@dimen/_20pxh"
            android:layout_marginStart="@dimen/_20pxh"
            android:layout_marginTop="@dimen/_15pxv"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@{searchTopicsVM.searchTopicsModel.txtDesign}"
            style="@style/txtPoppinsregular18" tools:text="@string/lbl_design"/>
    </LinearLayout>
</layout>
