<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="listprofilepictureRowModel" type="com.snakesapplication.app.modules.interestspeople.data.model.ListprofilepictureRowModel"/>
    </data>
    <LinearLayout android:id="@+id/linearRowprofilepicture"
        android:layout_height="wrap_content"
        android:layout_width="match_parent" android:orientation="horizontal">
        <ImageView android:id="@+id/imageProfilePicture"
            android:layout_height="@dimen/_60pxh"
            android:layout_marginBottom="@dimen/_3pxv"
            android:layout_width="@dimen/_60pxh"
            android:scaleType="centerCrop" circular="@{true}"
            imageRes="@{@drawable/img_profilepicture}"
            tools:ignore="ContentDescription" tools:src="@drawable/img_profilepicture"/>
        <LinearLayout android:gravity="start"
            android:id="@+id/linearColumnname"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16pxh"
            android:layout_marginTop="@dimen/_1pxv"
            android:layout_weight="0.5" android:layout_width="0dp" android:orientation="vertical">
            <TextView android:ellipsize="end" android:id="@+id/txtName"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text="@{listprofilepictureRowModel.txtName}"
                style="@style/txtPoppinssemibold16" tools:text="@string/lbl_john_doe"/>
            <TextView android:id="@+id/txtDescription"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginTop="@dimen/_3pxv"
                android:layout_width="match_parent"
                android:text="@{listprofilepictureRowModel.txtDescription}"
                style="@style/txtPoppinsregular12_1" tools:text="@string/msg_lorem_ipsum_is_a"/>
        </LinearLayout>
        <androidx.appcompat.widget.AppCompatButton
            android:ellipsize="end" android:gravity="center"
            android:id="@+id/btnFollow"
            android:layout_height="@dimen/_34pxv"
            android:layout_marginBottom="@dimen/_29pxv"
            android:layout_marginStart="@dimen/_16pxh"
            android:layout_width="@dimen/_90pxh"
            android:paddingBottom="@dimen/_6pxv"
            android:paddingEnd="@dimen/_23pxh"
            android:paddingStart="@dimen/_23pxh"
            android:paddingTop="@dimen/_6pxv" android:singleLine="true"
            android:text="@string/lbl_follow"
            android:textAllCaps="false" style="@style/btnSolidRounded_1" tools:text="@string/lbl_follow"/>
    </LinearLayout>
</layout>
